--- a/Week1.ipynb
+++ b/Week1.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Week1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMrbJlX20s9YIjqcmkrJ9VH",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyNu9Ptv37XyNLP09k5t4kSh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +31,25 @@
         "id": "_jY3IDam7OKb"
       },
       "source": [
-        ""
+        "import numpy as np\r\n",
+        "import pandas as pd\r\n",
+        "import cv2 as cv \r\n",
+        "from google.colab.patches import cv2_imshow\r\n",
+        "from skimage import io\r\n",
+        "from skimage import transform\r\n",
+        "from PIL import Image\r\n",
+        "import matplotlib.pyplot as plt"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QpilvsKJ706K"
+      },
+      "source": [
+        "url="
       ],
       "execution_count": null,
       "outputs": []
